Fixed films spacing and filter form color

--- a/public/styles/film.css
+++ b/public/styles/film.css
@@ -4,7 +4,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  /* padding-right: 100px */
+  margin: 0 -5px;
+  padding-right: 10px;
   padding-left: 10px;
   padding-top: 30px; }
 
@@ -17,8 +18,9 @@
   align-items: center;
   margin-bottom: 15px;
   background: white;
-  margin-right: 15px;
-  box-shadow: 3px 12px 35px -14px rgba(0, 0, 0, 0.75); }
+  margin-right: 5px;
+  margin-left: 5px;
+  box-shadow: 3px 12px 35px -14px rgba(0, 0, 0, 0.4); }
 
 .film__poster {
   width: 100%;
@@ -289,9 +291,8 @@
 @media screen and (max-width: 720px) {
   .films {
     margin-top: -350px;
-    justify-content: space-evenly; }
-  .film {
-    margin-right: 0; } }
+    }
+ }
 
 @media screen and (max-width: 600px) {
   .film-page {
