--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -147,7 +147,7 @@ button:focus {
   background-size: cover;
   width: 250px;
   height: 100%;
-  background: #161616;
+  background: #3f3f3f;
   box-shadow: 8px 5px 61px -4px rgba(0, 0, 0, 0.75); }
 
 .filter-form {
@@ -164,7 +164,7 @@ button:focus {
     text-align: center;
     text-transform: uppercase;
     border-bottom: 2px solid #7776fe;
-    color: #919191;
+    color: #f1f1f1;
     padding: 10px;
     font-size: 14px;
     font-style: uppercase; }
@@ -192,12 +192,12 @@ button:focus {
     margin: 0;
     padding: .3em;
     border: none;
-    border-bottom: 1px solid #919191;
-    color: #919191;
+    border-bottom: 1px solid #f1f1f1;
+    color: #f1f1f1;
     vertical-align: middle;
     box-sizing: border-box; }
   .filter-form select.form-item__input {
-    border: 1px solid #919191;
+    border: 1px solid #f1f1f1;
     border-radius: 4px;
     margin: 5px 0;
     padding: 7px 10px; }
@@ -210,9 +210,9 @@ button:focus {
     cursor: pointer;
     font-size: 12px;
     color: #515151;
-    background-color: #919191;
+    background-color: #f1f1f1;
     padding: 10px 25px;
-    border-color: #919191;
+    border-color: #f1f1f1;
     border-radius: 20px; }
   .filter-form .form-item__input_not-valid {
     color: red !important;
@@ -223,9 +223,9 @@ button:focus {
     padding: 0;
     margin: 0;
     margin-top: 10px;
-    color: #919191; }
+    color: #f1f1f1; }
   .filter-form .form-item__select-arrow {
-    border: solid #919191;
+    border: solid #f1f1f1;
     border-width: 0 1px 1px 0;
     display: inline-block;
     padding: 3px;
@@ -253,12 +253,12 @@ button:focus {
     border-radius: 4px;
     vertical-align: middle;
     box-sizing: border-box;
-    color: #919191; }
+    color: #f1f1f1; }
   .filter-form .form-item__range__range-slider {
     -webkit-appearance: none;
     width: 100%;
     height: 1px;
-    background: #919191;
+    background: #f1f1f1;
     outline: none;
     padding: 0;
     margin: 0; }
@@ -268,12 +268,12 @@ button:focus {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #919191;
+    background: #f1f1f1;
     cursor: pointer;
     -webkit-transition: background .15s ease-in-out;
     transition: background .15s ease-in-out; }
   .filter-form .form-item__range__range-slider::-webkit-range-track {
-    background-color: #919191;
+    background-color: #f1f1f1;
     height: 1px;
     outline: none;
     padding: 0;
@@ -283,12 +283,12 @@ button:focus {
     height: 15px;
     border: 0;
     border-radius: 50%;
-    background: #919191;
+    background: #f1f1f1;
     cursor: pointer;
     -webkit-transition: background .15s ease-in-out;
     transition: background .15s ease-in-out; }
   .filter-form .form-item__range__range-slider::-moz-range-track {
-    background-color: #919191;
+    background-color: #f1f1f1;
     height: 1px;
     outline: none;
     padding: 0;
