--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -100,6 +100,7 @@ button:focus {
   .profile-content-tab .comments {
     background: transparent; }
 
+
 .friends-block {
   flex-flow: column; }
 
@@ -117,7 +118,12 @@ button:focus {
     color: #161616;
     font-weight: 300;
     font-size: 12px;
-    flex: 1; }
+    flex: 1;
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   .friends-item img {
     width: 30px;
     margin-right: 10px; }
@@ -145,7 +151,9 @@ button:focus {
     background: #1b1b1b;
     cursor: pointer
 }
-
+.profile-content-tab.films{
+  flex: none;
+}
 @media screen and (min-width: 721px) {
   .right-container {
     padding-left: 290px; } }
@@ -198,6 +206,13 @@ button:focus {
     position: absolute; }
   .right-container {
     padding: 30px 10px; } }
+
+@media screen and (max-width: 720px){
+  .profile-content-tab.films {
+    margin-top: 0;
+    justify-content: space-around;
+  }
+}    
 
   @media screen and (max-width: 500px) {
       .profile-info p, .profile-info a, .profile-info h2{
